Files#readString() X intellj